[tool.poetry]
name = "omniparse_client"
version = "0.0.1"
description = "python client library for omniparse - easily parse/igest documents | media | website"
authors = ["Adithya S Kolavi"]
license = "Apache-2.0 license"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.3.0"
httpx = "^0.27.0"
pydantic = "^2.7.4"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
